# Document_DeBundler

./: .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY_OCR_BATCH.md  INTELLIGENT_PREPROCESSING_SUMMARY.md  LICENSE  README.md  index.html  package.json  setup.bat  setup.sh  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.serena/: project.yml
docs/: ARCHITECTURE.md  DEVELOPER_QUICK_START.md  EMBEDDING_SERVICE_IMPLEMENTATION.md  HANDOFF_2025-10-31-13-02.md  IMPLEMENTATION_SPEC_DEBUNDLING.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  LLM_INTEGRATION.md  OCR_EVENT_HANDLERS_IMPLEMENTATION.md  PARTIAL_OCR_TEST_FIXES_CHECKLIST.md  PHASE_3_STEP_2_IMPLEMENTATION_REPORT.md  PHASE_3_TEST_REPORT.md  PHASE_3_TEST_REPORT_FINAL.md  README.md  SPLIT_DETECTION_IMPLEMENTATION_REPORT.md  TESSERACT_BUNDLING.md  TESSERACT_FIX_VERIFICATION_REPORT.md  TEST_FIXES_IMPLEMENTATION_PLAN.md  UI_IMPLEMENTATION_PLAN.md
python-backend/: FIXES_2025-11-05.md  GPU_REQUIREMENTS.md  INTEGRATION_EXAMPLE_MAIN_PY.txt  MEMORY_CALCULATOR_FIX_2025-11-05.md  OCR_DETECTION_OPTIMIZATION_PHASE2.md  OCR_IMPROVEMENT_TO_100_PERCENT_SESSION.md  PHASE3_STEP2_COMPLETE.md  SESSION_HANDOFF_OCR_IMPROVEMENT_PHASE_2.md  SESSION_HANDOFF_OCR_IMPROVEMENT_PHASE_3.md  TEST_SCRIPTS_FIXES.md  calibrate_multiplier.py  download_embedding_models.py  download_llm_models.py  download_models.py  main.py  requirements-dev.txt  requirements.txt  (+35 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: commands.rs  main.rs  python_bridge.rs
(+111 files in other folders)
